--- a/guidr/src/less/login.less
+++ b/guidr/src/less/login.less
@@ -52,8 +52,7 @@
       }
 
       div {
-        display: flex;
-        align-items: center;
+        flex-direction: row;
 
         margin: 0 auto;
         margin-bottom: 25px;
