--- a/guidr/src/less/login.less
+++ b/guidr/src/less/login.less
@@ -42,12 +42,63 @@
 
     form {
       margin-top: 70px;
+      width: 80%;
 
       .login__input--container {
         font-size: 2rem;
 
         i {
           margin-right: 12px;
+          color: white;
+        }
+
+        input {
+          background-color: transparent;
+          border-radius: 20px;
+          border: 1px solid #133139;
+
+          padding: 5px 10px;
+          width: 40%;
+
+          color: white;
+          letter-spacing: 1px;
+
+          transition: width .7s, height .7s, background-color .7s, color .7s;
+
+          &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+            color: rgba(255, 255, 255, 0.65);
+          }
+          &::-moz-placeholder { /* Firefox 19+ */
+            color: rgba(255, 255, 255, 0.65);
+          }
+          &:-ms-input-placeholder { /* IE 10+ */
+            color: rgba(255, 255, 255, 0.65);
+          }
+          &:-moz-placeholder { /* Firefox 18- */
+            color: rgba(255, 255, 255, 0.65);
+          }
+
+          &:focus {
+            outline: none;
+            height: 20px;
+            width: 52%;
+
+            background-color: #133139;
+
+            &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+              color: white;
+            }
+            &::-moz-placeholder { /* Firefox 19+ */
+              color: white;
+            }
+            &:-ms-input-placeholder { /* IE 10+ */
+              color: white;
+            }
+            &:-moz-placeholder { /* Firefox 18- */
+              color: white;
+            }
+
+          }
         }
       }
 
@@ -66,15 +117,16 @@
       button {
         display: block;
         margin: 0 auto;
-        border: none;
+        border: 2px solid #133139;
 
         height: 30px;
         width: 150px;
 
-        background-color: #133139;
-        color: white;
+        background-color: transparent;
+        color: #133139;
 
         letter-spacing: 1px;
+        font-size: 1.6rem;
 
         transition: background-color .5s, color .5s, height .5s, width .5s, font-size .5s;
 
@@ -83,13 +135,11 @@
         }
 
         &:hover {
-          background-color: #7fc0e8;
-          color: #133139;
-          font-weight: bold;
+          background-color: #133139;
+          color: white;
           height: 40px;
           width: 170px;
-
-          font-size: 1.6rem;
+          font-size: 2rem;
         }
       }
     }
