--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -131,8 +131,47 @@ html {
 }
 .navigation {
   position: fixed;
+  z-index: 9001;
   top: 0;
   left: 0;
+  height: 45px;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid #f99e54;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 1.6rem;
+}
+.navigation a {
+  text-decoration: none;
+  color: #f99e54;
+  box-sizing: border-box;
+  padding: 15px;
+  transition: color 300ms;
+}
+@media (min-width: 1024px) {
+  .navigation a {
+    color: #133139;
+  }
+  .navigation a:hover {
+    color: #f99e54;
+  }
+}
+.navigation .active {
+  color: #133139;
+  background-color: #f99e54;
+  font-weight: 600;
+}
+@media (min-width: 1024px) {
+  .navigation .active {
+    color: inherit;
+    background-color: transparent;
+    font-weight: inherit;
+  }
+  .navigation .active:hover {
+    color: #f99e54;
+  }
 }
 .login {
   background-image: linear-gradient(to left bottom, #133139, #15434f, #155667, #136a81, #0e7e9b, #1e8aaa, #2b97ba, #38a3ca, #4daad2, #5fb1d9, #70b9e1, #7fc0e8);
@@ -262,4 +301,30 @@ html {
 }
 .login div p {
   font-size: 1.4rem;
+}
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 45px;
+}
+.home .grid {
+  width: 100%;
+  background-color: #eee;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+@media (min-width: 768px) {
+  .home .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.home .grid .tripgrid__card {
+  background-color: #ddd;
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 8px 12px;
+}
+.home .grid .tripgrid__card:nth-of-type(even) {
+  background-color: #eee;
 }
