--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -1,131 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
 html {
   font-size: 62.5%;
 }
@@ -214,7 +86,7 @@ html {
   width: 80%;
 }
 .login div form .login__input--container {
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 .login div form .login__input--container i {
   margin-right: 12px;
@@ -225,7 +97,8 @@ html {
   border-radius: 20px;
   border: 1px solid #133139;
   padding: 5px 10px;
-  width: 40%;
+  height: 25px;
+  width: 50%;
   color: white;
   letter-spacing: 1px;
   transition: width 0.7s, height 0.7s, background-color 0.7s, color 0.7s;
@@ -248,8 +121,8 @@ html {
 }
 .login div form .login__input--container input:focus {
   outline: none;
-  height: 20px;
-  width: 52%;
+  height: 35px;
+  width: 65%;
   background-color: #133139;
 }
 .login div form .login__input--container input:focus::-webkit-input-placeholder {
@@ -328,6 +201,23 @@ html {
 .home .grid .tripgrid__card:nth-of-type(even) {
   background-color: #eee;
 }
+/* Modal Styles */
 div .modal.show .modal-dialog {
   transform: translateY(20%);
+}
+div .modal.show .modal-dialog .modal-body {
+  display: flex;
+}
+div .modal.show .modal-dialog .modal-body .modal-info {
+  display: flex;
+}
+div .modal.show .modal-dialog .modal-body .modal-info img {
+  width: 150px;
+  height: 150px;
+}
+div .modal.show .modal-dialog .modal-body .modal-info div {
+  margin: 10px;
+}
+div .modal.show .modal-dialog .modal-footer {
+  justify-content: space-between;
 }
