--- a/guidr/src/less/navigation.less
+++ b/guidr/src/less/navigation.less
@@ -16,11 +16,11 @@
   font-size: 1.6rem;
 
   a {
-    text-decoration: none;
+
 
     color: #f99e54;
     box-sizing: border-box;
-    padding: 15px;
+    padding: 10px 20px;
 
     transition: color 300ms;
 
@@ -29,6 +29,7 @@
 
       &:hover {
         color: #f99e54;
+        text-decoration: none;
       }
     }
   }
