--- a/guidr/src/less/index.less
+++ b/guidr/src/less/index.less
@@ -5,4 +5,5 @@ html {
 @import './navigation.less';
 @import './login.less';
 @import './home.less';
+@import './portfolio.less';
 @import './tripgrid.less';
