--- a/guidr/src/less/portfolio.less
+++ b/guidr/src/less/portfolio.less
@@ -8,6 +8,14 @@
     flex-wrap: wrap;
     align-items: center;
 
+    position: relative;
+
+    .btn {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
     .portfolio__profile__bio {
       display: flex;
       align-items: center;
@@ -34,7 +42,7 @@
       }
     }
 
-    spacer {
+    .spacer {
       flex: 2;
     }
   }
