--- a/guidr/src/less/navigation.less
+++ b/guidr/src/less/navigation.less
@@ -15,12 +15,11 @@
 
   font-size: 1.6rem;
 
-  a {
-
-
+  .normal {
     color: #f99e54;
     box-sizing: border-box;
     padding: 10px 20px;
+    text-decoration: none;
 
     transition: color 300ms;
 
@@ -29,8 +28,11 @@
 
       &:hover {
         color: #f99e54;
-        text-decoration: none;
       }
+    }
+
+    &:hover {
+      text-decoration: none;
     }
   }
 
