Home and Prortfolio Authetication Complete

--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -266,3 +266,55 @@ div .modal.show .modal-dialog .modal-body .modal-info div {
 div .modal.show .modal-dialog .modal-footer {
   justify-content: space-between;
 }
+.trip-form__container {
+  height: 100vh;
+  padding: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.trip-form__container form {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 600px;
+  width: 100%;
+  max-width: 500px;
+  padding: 50px;
+  font-size: 1.4rem;
+}
+.trip-form__container form h2 {
+  font-size: 3.6rem;
+}
+.trip-form__container form div {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.trip-form__container form div input {
+  width: 100%;
+  max-width: 300px;
+}
+.trip-form__container form .textbox {
+  display: flex;
+  justify-content: space-between;
+}
+.trip-form__container form .checkbox {
+  width: 75px;
+}
+.trip-form__container form .description {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 1000px;
+}
+.trip-form__container form .description textarea {
+  width: 100%;
+  min-height: 100px;
+  max-height: 350px;
+  max-width: 600px;
+}
