--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -48,6 +48,19 @@ html {
     color: #f99e54;
   }
 }
+.navigation button {
+  border: 1px solid #133139;
+  font-weight: 500;
+  color: #133139;
+  background-color: transparent;
+  padding: 3px 8px;
+  margin: 0 30px 0 15px;
+  transition: background-color 0.4s;
+}
+.navigation button:hover {
+  background-color: #f99e54;
+  color: black;
+}
 .login {
   background-image: linear-gradient(to left bottom, #133139, #15434f, #155667, #136a81, #0e7e9b, #1e8aaa, #2b97ba, #38a3ca, #4daad2, #5fb1d9, #70b9e1, #7fc0e8);
   height: 100vh;
