--- a/guidr/src/less/navigation.less
+++ b/guidr/src/less/navigation.less
@@ -51,4 +51,21 @@
       }
     }
   }
+
+  button {
+    border: 1px solid #133139;
+    font-weight: 500;
+    color: #133139;
+    background-color: transparent;
+
+    padding: 3px 8px;
+    margin: 0 30px 0 15px;
+
+    transition: background-color .4s;
+
+    &:hover {
+      background-color: #f99e54;
+      color: black;
+    }
+  }
 }
