add trip checkbox converted to buttons

--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -1,6 +1,12 @@
 html {
   font-size: 62.5%;
 }
+.flexColumnCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .navigation {
   position: fixed;
   z-index: 9001;
@@ -8,7 +14,7 @@ html {
   left: 0;
   height: 45px;
   width: 100%;
-  background-color: white;
+  background-color: #eee;
   border-bottom: 1px solid #f99e54;
   display: flex;
   justify-content: flex-end;
@@ -62,7 +68,7 @@ html {
   color: black;
 }
 .login {
-  background-image: linear-gradient(to left bottom, #133139, #15434f, #155667, #136a81, #0e7e9b, #1e8aaa, #2b97ba, #38a3ca, #4daad2, #5fb1d9, #70b9e1, #7fc0e8);
+  background-image: linear-gradient(to left bottom, #f99e54, #dea142, #c1a338, #a3a435, #83a33b, #68a851, #49ac69, #1cae82, #00b5a8, #00bbc7, #4ebedd, #7fc0e8);
   height: 100vh;
   width: 100%;
   position: relative;
@@ -194,9 +200,6 @@ html {
   font-size: 1.4rem;
 }
 .home {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-top: 45px;
 }
 .portfolio {
