--- a/guidr/src/less/login.less
+++ b/guidr/src/less/login.less
@@ -1,14 +1,12 @@
 .login {
-  background-image: linear-gradient(to left bottom, #133139, #15434f, #155667, #136a81, #0e7e9b, #1e8aaa, #2b97ba, #38a3ca, #4daad2, #5fb1d9, #70b9e1, #7fc0e8);
+  background-image: linear-gradient(to left bottom, #f99e54, #dea142, #c1a338, #a3a435, #83a33b, #68a851, #49ac69, #1cae82, #00b5a8, #00bbc7, #4ebedd, #7fc0e8);
   height: 100vh;
   width: 100%;
   position: relative;
   z-index: 50000;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  .flexColumnCenter();
+
 
   div {
     width: 100%;
