--- a/guidr/src/less/tripgrid.less
+++ b/guidr/src/less/tripgrid.less
@@ -1,7 +1,7 @@
 /* Grid Styles */
 .grid {
 width: 100%;
-background-color: #eee;
+background-color: @white-1l;
 
 display: grid;
 grid-template-columns: repeat(1, 1fr);
@@ -12,14 +12,14 @@ grid-template-columns: repeat(1, 1fr);
 
 
 .tripgrid__card {
-  background-color: #ddd;
+  background-color: @white-1d;
   text-align: center;
   font-size: 1.8rem;
 
   padding: 8px 12px;
 
   &:nth-of-type(even) {
-    background-color: #eee;
+    background-color: @white-1l;
   }
 }
 }
