--- a/guidr/src/less/index.less
+++ b/guidr/src/less/index.less
@@ -2,6 +2,8 @@ html {
   font-size: 62.5%;
 }
 
+@import './variables.less';
+@import './mixins.less';
 @import './navigation.less';
 @import './login.less';
 @import './home.less';
