--- a/guidr/src/less/navigation.less
+++ b/guidr/src/less/navigation.less
@@ -6,8 +6,8 @@
 
   height: 45px;
   width: 100%;
-  background-color: white;
-  border-bottom: 1px solid #f99e54;
+  background-color: @white-1l;
+  border-bottom: 1px solid @tertiary;
 
   display: flex;
   justify-content: flex-end;
@@ -16,7 +16,7 @@
   font-size: 1.6rem;
 
   .normal {
-    color: #f99e54;
+    color: @tertiary;
     box-sizing: border-box;
     padding: 10px 20px;
     text-decoration: none;
@@ -24,10 +24,10 @@
     transition: color 300ms;
 
     @media(min-width: 1024px) {
-      color: #133139;
+      color:@dark-main;
 
       &:hover {
-        color: #f99e54;
+        color: @tertiary;
       }
     }
 
@@ -37,8 +37,8 @@
   }
 
   .active {
-    color: #133139;
-    background-color: #f99e54;
+    color: @dark-main;
+    background-color: @tertiary;
     font-weight: 600;
 
     @media(min-width: 1024px) {
@@ -47,15 +47,15 @@
       font-weight: inherit;
 
       &:hover {
-        color: #f99e54;
+        color: @tertiary;
       }
     }
   }
 
   button {
-    border: 1px solid #133139;
+    border: 1px solid @dark-main;
     font-weight: 500;
-    color: #133139;
+    color: @dark-main;
     background-color: transparent;
 
     padding: 3px 8px;
@@ -64,7 +64,7 @@
     transition: background-color .4s;
 
     &:hover {
-      background-color: #f99e54;
+      background-color: @tertiary;
       color: black;
     }
   }
