--- a/guidr/src/less/portfolio.less
+++ b/guidr/src/less/portfolio.less
@@ -14,6 +14,10 @@
       position: absolute;
       top: 0;
       right: 0;
+
+      &:last-of-type {
+        right: 45px;
+      }
     }
 
     .portfolio__profile__bio {
