Vanilla BG style changes, Login/Sign Up text added to Register Card

--- a/guidr/src/less/portfolio.less
+++ b/guidr/src/less/portfolio.less
@@ -9,10 +9,11 @@
     align-items: center;
 
     position: relative;
+    background-color: white;
 
     .btn {
       position: absolute;
-      top: 0;
+      top: 5px;
       right: 0;
 
       &:last-of-type {
