--- a/guidr/src/css/index.css
+++ b/guidr/src/css/index.css
@@ -1,6 +1,9 @@
 html {
   font-size: 62.5%;
 }
+html body {
+  background-color: #ddd;
+}
 .flexColumnCenter {
   display: flex;
   flex-direction: column;
@@ -95,12 +98,20 @@ html {
 }
 .login div .login__form--head {
   background-image: url("../img/login-header-bg.jpeg");
-  background-color: #ddd;
+  background-color: #D3D3D3;
   height: 250px;
   width: 100%;
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+}
+.login div .login__form--head h1 {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  font-size: 4.8rem;
+  color: #eee;
 }
 .login div form {
   margin-top: 70px;
@@ -209,10 +220,11 @@ html {
   flex-wrap: wrap;
   align-items: center;
   position: relative;
+  background-color: white;
 }
 .portfolio .portfolio__profile .btn {
   position: absolute;
-  top: 0;
+  top: 5px;
   right: 0;
 }
 .portfolio .portfolio__profile .btn:last-of-type {
@@ -254,7 +266,7 @@ html {
   }
 }
 .grid .tripgrid__card {
-  background-color: #ddd;
+  background-color: #D3D3D3;
   text-align: center;
   font-size: 1.8rem;
   padding: 8px 12px;
@@ -288,9 +300,11 @@ div .modal.show .modal-dialog .modal-footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #D3D3D3;
 }
 .trip-form__container form {
-  border: 1px solid red;
+  background-color: #eee;
+  box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.6);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -304,6 +318,10 @@ div .modal.show .modal-dialog .modal-footer {
 }
 .trip-form__container form h2 {
   font-size: 3.6rem;
+}
+.trip-form__container form label {
+  font-weight: bold;
+  font-size: 1.6rem;
 }
 .trip-form__container form div {
   width: 100%;
@@ -319,8 +337,19 @@ div .modal.show .modal-dialog .modal-footer {
   display: flex;
   justify-content: space-between;
 }
-.trip-form__container form .checkbox {
+.trip-form__container form .btnbox {
   width: 75px;
+}
+.trip-form__container form .btnbox:hover {
+  width: 75px;
+  font-size: inherit;
+}
+.trip-form__container form .btnbox button:last-of-type {
+  margin-left: 12px;
+}
+.trip-form__container form .btnbox .selected {
+  background-color: #133139;
+  color: #eee;
 }
 .trip-form__container form .description {
   display: flex;
@@ -333,6 +362,25 @@ div .modal.show .modal-dialog .modal-footer {
 .trip-form__container form .description textarea {
   width: 100%;
   min-height: 100px;
-  max-height: 350px;
+  max-height: 300px;
   max-width: 600px;
+}
+.trip-form__container form button {
+  display: block;
+  margin: 0 auto;
+  border: 2px solid #133139;
+  height: 30px;
+  width: 150px;
+  background-color: transparent;
+  color: #133139;
+  letter-spacing: 1px;
+  font-size: 1.6rem;
+  transition: background-color 0.5s, color 0.5s, height 0.5s, width 0.5s, font-size 0.5s;
+}
+.trip-form__container form button:focus {
+  outline: none;
+}
+.trip-form__container form button:hover {
+  background-color: #133139;
+  color: #eee;
 }
