--- a/guidr/src/less/login.less
+++ b/guidr/src/less/login.less
@@ -32,6 +32,17 @@
       background-position: bottom;
       background-repeat: no-repeat;
       background-size: cover;
+
+      position: relative;
+
+      h1 {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+
+        font-size: 4.8rem;
+        color: @white-1l;
+      }
     }
 
     form {
