--- a/guidr/src/less/index.less
+++ b/guidr/src/less/index.less
@@ -8,6 +8,7 @@ html {
 
 @import './variables.less';
 @import './mixins.less';
+@import './access-denied.less';
 @import './navigation.less';
 @import './login.less';
 @import './home.less';
