--- a/guidr/src/less/navigation.less
+++ b/guidr/src/less/navigation.less
@@ -15,6 +15,15 @@
 
   font-size: 1.6rem;
 
+  .search {
+    margin-right: 13%;
+
+    button {
+      font-size: 1.3rem;
+      letter-spacing: 2px;
+    }
+  }
+
   .normal {
     color: @tertiary;
     box-sizing: border-box;
