--- a/src/less/index.less
+++ b/src/less/index.less
@@ -8,10 +8,15 @@ html {
 
 @import './variables.less';
 @import './mixins.less';
+
 @import './access-denied.less';
-@import './navigation.less';
+
 @import './login.less';
+@import './navigation.less';
+
 @import './home.less';
+@import './side-panel.less';
+
 @import './portfolio.less';
 @import './tripgrid.less';
 @import './trip-form.less';
