--- a/src/less/login.less
+++ b/src/less/login.less
@@ -22,6 +22,8 @@
       background-color: @secondary;
 
       justify-content: flex-start;
+      overflow-x: hidden;
+      overflow-y: hidden;
     }
 
     .login__form--head {
@@ -116,7 +118,8 @@
 
         span {
           font-size: 1.2rem;
-          margin-bottom: 3px;
+          margin-bottom: 2px;
+          margin-left: 7px;
         }
       }
 
@@ -151,7 +154,16 @@
     }
 
     p {
-      font-size: 1.4rem;
+      font-size: 1.8rem;
+      color: @dark-main;
+
+      span {
+        margin-left: 5px;
+        color: @dark-main;
+        text-decoration: underline;
+
+        cursor: pointer;
+      }
     }
   }
 }
