--- a/src/less/tripgrid.less
+++ b/src/less/tripgrid.less
@@ -1,55 +1,57 @@
-/* Grid Styles */
-.grid {
-width: 100%;
-background-color: @white-1l;
+.home-search {
+  /* Grid Styles */
+  .grid {
+  width: 100%;
+  background-color: @white-1l;
 
-display: grid;
-grid-template-columns: repeat(1, 1fr);
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 
-@media(min-width: 768px) {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-
-.tripgrid__card {
-  background-color: @white-1d;
-  text-align: center;
-  font-size: 1.8rem;
-
-  padding: 8px 12px;
-
-  &:nth-of-type(even) {
-    background-color: @white-1l;
+  @media(min-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
   }
-}
-}
 
 
-/* Modal Styles */
+  .tripgrid__card {
+    background-color: @white-1d;
+    text-align: center;
+    font-size: 1.8rem;
 
-div {
-  .modal.show .modal-dialog {
-    transform: translateY(20%);
+    padding: 8px 12px;
 
-    .modal-body {
-      display: flex;
+    &:nth-of-type(even) {
+      background-color: @white-1l;
+    }
+  }
+  }
 
-      .modal-info {
+
+  /* Modal Styles */
+
+  div {
+    .modal.show .modal-dialog {
+      transform: translateY(20%);
+
+      .modal-body {
         display: flex;
 
-        img {
-          width: 150px;
-          height: 150px;
-        }
+        .modal-info {
+          display: flex;
 
-        div {
-          margin: 10px;
+          img {
+            width: 150px;
+            height: 150px;
+          }
+
+          div {
+            margin: 10px;
+          }
         }
       }
-    }
 
-    .modal-footer {
-      justify-content: space-between;
+      .modal-footer {
+        justify-content: space-between;
+      }
     }
   }
 }
