Home Restyled, Portfolio Style Fixed

--- a/src/less/side-panel.less
+++ b/src/less/side-panel.less
@@ -12,16 +12,16 @@
   
     .search {
       background-color: @white-1d;
-      width: 40%;
+      width: 100%;
       margin: 0 auto;
   
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
   
       border-bottom: 2px solid @white-1l;
       padding: 20px;
        input {
-         width: 100%;
+         width: 30%;
          height: 25px;
   
          border: none;
@@ -72,5 +72,4 @@
       }
     }
   }
-  
 }
