--- a/src/css/index.css
+++ b/src/css/index.css
@@ -253,6 +253,8 @@ html body {
 }
 .home .home-search {
   width: 100%;
+  max-width: 1068px;
+  margin: 0 auto;
 }
 .home-search .side-panel {
   width: 100%;
@@ -265,15 +267,15 @@ html body {
 }
 .home-search .side-panel .search {
   background-color: #D3D3D3;
-  width: 40%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   border-bottom: 2px solid #eee;
   padding: 20px;
 }
 .home-search .side-panel .search input {
-  width: 100%;
+  width: 30%;
   height: 25px;
   border: none;
   padding-left: 5px;
@@ -353,47 +355,52 @@ html body {
 .portfolio .portfolio__profile .spacer {
   flex: 2;
 }
-.home-search {
+.home-search,
+.portfolio-container {
   /* Grid Styles */
-  /* Modal Styles */
 }
-.home-search .grid {
+.home-search .grid,
+.portfolio-container .grid {
   width: 100%;
   background-color: #eee;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
 @media (min-width: 768px) {
-  .home-search .grid {
+  .home-search .grid,
+  .portfolio-container .grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.home-search .grid .tripgrid__card {
+.home-search .grid .tripgrid__card,
+.portfolio-container .grid .tripgrid__card {
   background-color: #D3D3D3;
   text-align: center;
   font-size: 1.8rem;
   padding: 8px 12px;
 }
-.home-search .grid .tripgrid__card:nth-of-type(even) {
+.home-search .grid .tripgrid__card:nth-of-type(even),
+.portfolio-container .grid .tripgrid__card:nth-of-type(even) {
   background-color: #eee;
 }
-.home-search div .modal.show .modal-dialog {
+/* Modal Styles */
+div .modal.show .modal-dialog {
   transform: translateY(20%);
 }
-.home-search div .modal.show .modal-dialog .modal-body {
+div .modal.show .modal-dialog .modal-body {
   display: flex;
 }
-.home-search div .modal.show .modal-dialog .modal-body .modal-info {
+div .modal.show .modal-dialog .modal-body .modal-info {
   display: flex;
 }
-.home-search div .modal.show .modal-dialog .modal-body .modal-info img {
+div .modal.show .modal-dialog .modal-body .modal-info img {
   width: 150px;
   height: 150px;
 }
-.home-search div .modal.show .modal-dialog .modal-body .modal-info div {
+div .modal.show .modal-dialog .modal-body .modal-info div {
   margin: 10px;
 }
-.home-search div .modal.show .modal-dialog .modal-footer {
+div .modal.show .modal-dialog .modal-footer {
   justify-content: space-between;
 }
 .trip-form__container {
