--- a/src/css/index.css
+++ b/src/css/index.css
@@ -312,6 +312,42 @@ html body {
   outline: none;
   background-color: #55A04B;
 }
+.user-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 25px;
+  margin-top: 30px;
+}
+.user-grid .user-grid__card {
+  background-color: #eee;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+}
+.user-grid .user-grid__card .user-grid__card__banner {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  background-color: #7fc0e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.user-grid .user-grid__card .modal-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-grid .user-grid__card .modal-container button {
+  margin-bottom: 10px;
+  border-radius: 20px;
+  width: 75px;
+}
 .portfolio {
   width: 100%;
   max-width: 1026px;
