Code Refactor v1 Complete

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -15,7 +15,7 @@ html {
 @import './navigation.less';
 
 @import './home.less';
-@import './side-panel.less';
+@import './top-panel.less';
 @import './usergrid.less';
 
 @import './portfolio.less';
